[FIX] [CT-96] [CT-98] align tokens, notification count

--- a/src/pages/TradePage/ui/TradePage.module.scss
+++ b/src/pages/TradePage/ui/TradePage.module.scss
@@ -6,7 +6,6 @@
     justify-content: center;
 
     max-width: 1440px;
-    min-height: calc(100vh - var(--navbar-height));
     margin: 0 auto;
     padding: 20px;
 }
